slider on rwd set up

--- a/project.css
+++ b/project.css
@@ -120,7 +120,7 @@
     #menu li
     {
         padding: 10px 0;
-        font-size: 22px;
+        font-size: 30px;
     }
 
     #menuToggle input:checked ~ ul
@@ -189,31 +189,32 @@
         margin-left: 0;
         margin-right: 0;
         background-color: #2b57a1;
-        height: 530px;
+        height: 550px;
         /* display: flex; */
     }
     .hero-left {
         display: block;
         text-align: center;
     }
+
     .hero-text {
         background: #2b57a1;
         /* text-align: center; */
         color: #f1f4fc;
+        padding: 20px;
+        text-align: center;
     }
 
     .hero-text_sloth_down {
-        width: 100%;
-        font-size: 35px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        font-size: 30px;
+        padding-top: 10px;
+        padding-bottom: 15px;
     }
     
     .hero-button {
         background: #2b57a1;
         color: white;
-        margin-top: 60px;
-        margin-left: 25px
+        margin-top: 45px;
     }
     .hero-button__color {
         background: white;
@@ -221,6 +222,7 @@
         border-radius: 10px;
         color: black;
     }
+
     .hero-right {
         position: relative;
         height: 281px;
@@ -229,13 +231,13 @@
         /* margin-top: 70px; */
         color: #f1f4fc;
     }
+
     .hero-slider img {
-        width: 90%;
-        height: 90%;
+        width: 87%;
+        height: 87%;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         position: absolute;
         transition: all 4s;
-        text-align: center;
         border-radius: 20px;
     }
     .hero-right img:first-child {
@@ -258,11 +260,13 @@
         height: 52px;
         letter-spacing: 4px;
         cursor: pointer;
-        transition: color 0.5s, font-size 0.5s;
+        transition: color 0.5s;
+        /* font-size: 30px; */
     }
     #hero a :hover {
         color: lightblue;
     }
+
     .main-title {
         background: rgb(221, 152, 152);
         height: 250px;
@@ -271,7 +275,7 @@
     .main-box {
         /* display: flex; */
         justify-content: space-around;
-        padding-top: 40px;
+        padding-top: 200px;
     }
     .main-column {
         margin: 5px;
@@ -280,6 +284,7 @@
     .main-icon {
         display: block
     }
+
     .main-text{
         color: black;
     }
@@ -333,6 +338,7 @@
         background: #448aff;
         color: #f1f4fc;
     }
+
     input {
         height: 20px;
         width: 205px;
