--- a/project.desktop.css
+++ b/project.desktop.css
@@ -127,13 +127,13 @@ h1, h2, h3 {
 }
 
 .hero-slider img {
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     /* position: absolute; */
     transition: all 4s;
     border-radius: 20px;  
-    margin-top: -20px;
+    margin-top: -22px;
 }
 
 .hero-right img:first-child {
