--- a/project.desktop.css
+++ b/project.desktop.css
@@ -233,8 +233,8 @@ form {
 }
 
 .form-text {
-    letter-spacing: 2px;
-    margin-top: 13px;
+    letter-spacing: 1,5px;
+    margin-top: 10px;
     margin-bottom: 1rem;
     color: #122843;
 }
@@ -249,22 +249,25 @@ form {
 }
 
 .form-btn button {
-    width: 224px;
+    width: 300px;
+    height: 30px;
     border-radius: 5px;
     border-color: #448aff;
     background: #448aff;
     color: #f1f4fc;
+    margin-top: 10px;
 }
 
 input {
-    height: 20px;
-    width: 221px;
+    height: 25px;
+    width: 300px;
     background: #f1f4fc;
     border-radius: 5px;
 }
 
 .form {
     height: 60%;
+    width: 70%;
     background: #18bfac;
 }
 
