background color of nav elements changed

--- a/project.desktop.css
+++ b/project.desktop.css
@@ -60,7 +60,10 @@ h1, h2, h3 {
 }
 
 .nav-item:hover {
-    color: #5e9aff;
+    color: #18bfac;
+    background: #224a8f;
+    opacity: 0.7;
+    border-radius: 5px;
 }
 
 #hero {
