--- a/project.desktop.css
+++ b/project.desktop.css
@@ -301,7 +301,7 @@ input {
 
 .team-member {
     margin-top: 30px;
-    max-width: 17%;
+    max-width: 23%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
     border-radius: 20px;
 }
@@ -312,7 +312,6 @@ input {
 
 .member-img-container, .member-description, .member-links {
     box-sizing: border-box;
-    max-width: 100%;
     margin-bottom: 5px;
 }
 
@@ -320,6 +319,7 @@ input {
     box-shadow: 0 0 20px whitesmoke;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    width: 75%;
 }
 
 .member-description {
@@ -336,6 +336,7 @@ input {
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 10px;
+    font-size: 40px;
 }
 
 .member-links>a {
