--- a/project.css
+++ b/project.css
@@ -142,6 +142,7 @@
         margin-right: 0;
         background-color: #2b57a1;
         height: 580px;
+        width: auto;
         padding-top: 20px;
     }
     .hero-left {
@@ -255,6 +256,7 @@
         color: #122843;
         text-align: center;
         padding: 40px 60px 30px 60px;
+        height: auto;;
     }
     .form-text__input{
         margin: auto;  
@@ -375,9 +377,10 @@
     .footer {
         background: #2b57a1;
     }
+        
     .footer-text {
         text-align: center;
         color: aliceblue;
         padding-top: 30px;
-        padding-bottom: 30px;
+        padding-bottom: 30px; 
     }
